--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
     "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-type-animation": "^3.2.0",
-    "nodemon": "^3.0.3"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
