--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "nodemon": "^3.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-cookie": "^7.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-type-animation": "^3.2.0",
-    "nodemon": "^3.0.3"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
