--- a/.github/workflows/main_cfstres.yml
+++ b/.github/workflows/main_cfstres.yml
@@ -21,14 +21,16 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Install npm packages - server
         run: |
+          cd server
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Install npm packages, build then copy files - client
+        run: |
+          cd client
+          npm install
+          npm run build
+          cp -r ./dist ../server/public
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -48,9 +50,6 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
